# TCO-Ringbeller-legacy

./: LICENSE  README.md
solution/: CMakeLists.txt  README.md  Validation.md
solution/.build/: README.md
solution/app/: CMakeLists.txt
solution/app/src/: do_at_cops.cpp  do_at_cops.hpp  do_at_ok.cpp  do_at_ok.hpp  do_ati.cpp  do_ati.hpp  do_make_vcall.cpp  do_make_vcall.hpp  do_receive_sms.cpp  do_receive_sms.hpp  do_receive_vcall.cpp  do_receive_vcall.hpp  do_send_sms.cpp  do_send_sms.hpp  execute.hpp  formatters.hpp  main.cpp  serial_port_setup.cpp  serial_port_setup.hpp
solution/lib/: CMakeLists.txt
solution/lib/include/: asio_types.hpp  logging.hpp  message.hpp  parser.hpp  read.hpp  result_code_formatter.hpp  write.hpp
solution/lib/include/at/: at.hpp  ok.hpp  response.hpp
solution/lib/include/messages/: at.hpp  at_cmgf.hpp  at_cmgs.hpp  at_cnmi.hpp  at_cops.hpp  at_cscs.hpp  at_cusd.hpp  at_qcfg.hpp  at_qpcmv.hpp  ata.hpp  atd.hpp  ath.hpp  ati.hpp
solution/lib/src/: parser.cpp  poc.cpp
tools/: socat.sh
